# airspeed

./: .gitignore  README.md
.memo/: .memoignore  AI_USAGE_GUIDE.md  memosymbols.txt
airspeed_services/: CMakeLists.txt  package.xml
airspeed_services/srv/: DataCollection.srv
src/data_collection_service/: .gitignore  CMakeLists.txt  PIPELINE_MAPPING_CN.md  README.md  data_storage_node_wrapper  global_config.yaml  launch.sh  package.xml  pyproject.toml  run_global_config.sh  setup.cfg  setup.py
src/data_collection_service/config/: data_collection_service_config.yaml  data_storage_config.yaml  session_vr_ik_robot_button_control.yaml
src/data_collection_service/config/session/: session_vr_ik_robot_button_control.yaml
src/data_collection_service/core/adapters/: __init__.py  common.py  registry.py
src/data_collection_service/core/config/: __init__.py  session_config.py
src/data_collection_service/core/contracts/: __init__.py  models.py  writer_sample.py
src/data_collection_service/core/runtime/: __init__.py  manual_operator_ui.py  recording_control.py  recording_state.py  ros2_collection_node.py  stream_tracker.py
src/data_collection_service/core/runtime/threaded/: __init__.py  ros2_collection_node.py  stream_tracker.py
src/data_collection_service/core/schema/: __init__.py  adapter_profiles.py  boundary_validator.py
src/data_collection_service/core/storage/: __init__.py  airs_hdf5_writer.py
src/data_collection_service/core/storage/threaded/: __init__.py  airs_hdf5_writer.py
src/data_collection_service/core/validation/: __init__.py  dataset_validator.py
src/data_collection_service/data_collection_service/: __init__.py  data_processor.py  data_storage_node.py  data_subscriber.py  multi_frequency_collector.py  storage_manager.py  vr_button_controller.py
src/data_collection_service/else/: COMPREHENSIVE_INTEGRATION_GUIDE.md
src/data_collection_service/else/examples/: example_usage.py
src/data_collection_service/else/resource/: data_collection_service
src/data_collection_service/else/scripts/: check_vr_button_status.py  data_storage_node
src/data_collection_service/launch/: complete_system.launch.py  data_storage.launch.py  platform_collection.launch.py
src/data_collection_service/tests/: conftest.py
src/data_collection_service/tests/integration/: test_airs_collection_pipeline.py
src/data_collection_service/tests/unit/config/: test_session_config.py
src/data_collection_service/tests/unit/contracts/: test_models.py
src/data_collection_service/tests/unit/runtime/: test_recording_control.py  test_recording_state.py  test_stream_tracker.py
src/data_collection_service/tests/unit/schema/: test_adapter_profiles.py  test_boundary_validator.py
src/data_collection_service/tests/unit/storage/: test_airs_hdf5_writer.py
src/data_collection_service/tools/: README.md  convert_folder.py  convert_h5_to_jsonl.py  convert_h5_to_lerobot.py  convert_h5_to_parquet.py  convert_h5_to_zarr.py  dev_mock_messages.py  dev_mock_ros2_publishers.py  dev_mock_session.py  validate_conversion.py  validate_dataset.py
src/robot_interface/openarm/openarm-ik-ros2-adaptor/: PIPELINE_MAPPING.md  README.md  pyproject.toml
src/robot_interface/openarm/openarm-ik-ros2-adaptor/3D_assets/: scene_markers.js
src/robot_interface/openarm/openarm-ik-ros2-adaptor/config/: meta.yaml  robot.yaml  server.yaml  solver_smooth.yaml  space.yaml  vr.yaml
src/robot_interface/openarm/openarm-ik-ros2-adaptor/frontend/: config.js
src/robot_interface/openarm/openarm-ik-ros2-adaptor/frontend/3d_assets/: 3D_assets
src/robot_interface/openarm/openarm-ik-ros2-adaptor/frontend/web_pages/: app.js  styles.css
src/robot_interface/openarm/openarm-ik-ros2-adaptor/launch/: start.sh
src/robot_interface/openarm/openarm-ik-ros2-adaptor/openarm_ik_solver/: __init__.py  config.py  openarm_robot.py  ram.py  robot.py  solver.py
src/robot_interface/openarm/openarm-ik-ros2-adaptor/server/: __init__.py  audit_logger.py  config_loader.py  ik_service.py  main.py  ros2_publisher.py  snapshot.py  solver_loop.py  target_buffer.py  vr_normalizer.py  vr_subscriber.py  ws_handler.py
src/robot_interface/openarm/openarm-ik-ros2-adaptor/web/: app.js  index.html
src/robot_interface/openarm/openarm-ik-ros2-adaptor/webui-monitor/3d_assets/: handle_marker.js
src/sensor_interface/: CMakeLists.txt  PIPELINE_MAPPING_CN.md  README.md  global_config.yaml  launch.sh  package.xml  run_global_config.sh  setup.py
src/sensor_interface/camera-stream-adaptor/: README.md  camera_publisher.py  pyproject.toml
src/sensor_interface/camera-stream-adaptor/config/: camera.yaml
src/sensor_interface/camera-stream-adaptor/launch/: start.sh
src/sensor_interface/config/: realsense_config.yaml
src/sensor_interface/launch/: realsense_camera.launch.py
src/sensor_interface/scripts/: install_dependencies.sh  realsense_camera_node.py
src/sensor_interface/sensor_interface/: __init__.py
src/teleoperation_interface/: CMakeLists.txt  PIPELINE_MAPPING_CN.md  README.md  global_config.yaml  launch.sh  package.xml  run_global_config.sh
src/teleoperation_interface/config/: config.json  teleoperation_config.yaml
src/teleoperation_interface/else/pem/: cert.pem  key.pem
src/teleoperation_interface/else/static/: VRDriverPlaneCamera.css  VRDriverPlaneCamera.html  VRDriverPlaneCamera.js  common.less
src/teleoperation_interface/launch/: vr_teleoperation.launch.py
src/teleoperation_interface/scripts/: vr_teleoperation_node
src/teleoperation_interface/vr-standard-ros2-bridge-adaptor/: README.md  pyproject.toml  vr_bridge_server.py
src/teleoperation_interface/vr-standard-ros2-bridge-adaptor/config/: config.json
src/teleoperation_interface/vr-standard-ros2-bridge-adaptor/launch/: start.sh
src/teleoperation_interface/vr-standard-ros2-bridge-adaptor/pem/: cert.pem  key.pem
src/teleoperation_interface/vr-standard-ros2-bridge-adaptor/static/: VRDriverPlaneCamera.html
src/teleoperation_interface/vr_teleoperation/: vr_data_server.py  vr_teleoperation_node.py
utils/devices/Noitom/: CMakeLists.txt  MocapApi.h  mocapapi_server.cpp
(+138 files in other folders)
