[project]
name = "airspeed-data-collection"
version = "1.0.0"
description = "YAML-driven, hardware-agnostic multi-stream data recorder — ROS2→HDF5 with AIRS standard"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.6",
    "numpy>=1.21",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ros2 = [
    "rclpy",
    "geometry-msgs",
    "sensor-msgs",
    "std-msgs",
]
convert = [
    "pyarrow>=10.0",
    "zarr>=2.0",
    "opencv-python>=4.5",
    "lerobot",
]
tools = [
    "pyarrow>=10.0",
    "zarr>=2.0",
    "opencv-python>=4.5",
    "lerobot",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
