[project]
name = "airspeed-camera-publisher"
version = "1.0.0"
description = "RealSense camera Image + CameraInfo ROS2 publisher — streams at native rate"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.21",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
ros2 = [
    "rclpy",
    "sensor-msgs",
]
lerobot = [
    "lerobot",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
]
